2010-04-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Require TYPO3 4.3
	* Manual updated.
	* Updated ext_emconf from TER version 1.2.3

2010-04-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7259: Use of deprecated function t3lib_div::makeInstanceClassName()

2009-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug: Mishandling of session data. Thanks to Wolo Wolski.
	* Updated ext_emconf from TER version 1.2.2
	* Updated manual.

2009-08-31  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature: new TS constant accessibleOutputImage and textual version.
	* Manual updated.
	* Updated ext_emconf from TER version 1.2.0

2009-08-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #3056: Audio Captcha is not rendered in IE8
	* Added feature: Two new TS constants: textHorizontalPosition and textVerticalPosition. Thanks to Julia Pardanaud.
	* Added Turkish word list. Thanks to Zeynep Nurten Cinarcik.

2009-06-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #3056: Audio Captcha is not rendered in IE8

2009-06-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #3526: Use eID API for graphical and audio captcha generation.
	* Follow-up to #3526 for TYPO3 < 4.3: Use eID API for graphical and audio captcha generation.
	* Fixed bug #3530: Morphed image blocks background type not working.
	* Follow-up to feature #3526: Cleanup parameters of new captcha image

2009-05-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #3472: No image rendering in T3 V4.3 alpha3.

2009-05-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #3244: User can set the width of the generated captcha-image. Thanks to Simon Schick.

2009-04-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Added Russian translation. Thanks to Андрей Аксенов.

2009-04-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #3052: "onclick" should be used instead of "onClick". Thanks to Gerald Schwarz.
	* Fixed bug: Random number generator should be seeded.
