@@ -1,3 +1,7 @@
+2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #10223: BE module not shown anymore with TYPO3 4.4
+
 2010-04-16  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Require TYPO3 4.3
